Bug 97548 - EDITING: When selecting cells for a formula, Ctrl is incorrectly behaving like Shift
Summary: EDITING: When selecting cells for a formula, Ctrl is incorrectly behaving lik...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.5.0 release
Hardware: All All
: medium minor
Assignee: Dennis Francis
URL:
Whiteboard: target:6.0.0 target:5.4.2
Keywords: bibisectRequest, regression
Depends on:
Blocks:
 
Reported: 2016-02-04 04:07 UTC by Óvári
Modified: 2017-09-04 10:05 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Óvári 2016-02-04 04:07:12 UTC
1. Open Calc
2. In cell A1 type:           =SUM(
3. Press and hold Ctrl
4. Click cell B1
   Cell A1 shows:             =SUM(B1
5. Click cell G1
   Cell A1 incorrecly shows:  =SUM(B1:G1
   Cell A1 should show:       =SUM(B1,G1

May relate to bug 93936.

Version: 5.2.0.0.alpha0+
Build ID: 91a7580e03d5b47c6e2513afce85ddee45e730b6
CPU Threads: 2; OS Version: Windows 6.29; UI Render: default; 
TinderBox: Win-x86@39, Branch:master, Time: 2016-02-03_23:51:42
Comment 1 Óvári 2016-02-05 09:23:58 UTC
Reproducible with Linux Mint 17.3
Version: 5.2.0.0.alpha0+
Build ID: 5e31c9d9e42da8d8776621b2f80dfe9e04ca0871
CPU Threads: 2; OS Version: Linux 3.19; UI Render: default; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2016-02-05_02:21:38
Comment 2 Buovjaga 2016-02-11 08:15:47 UTC
Repro.

Win 7 Pro 64-bit Version: 5.2.0.0.alpha0+
Build ID: a6f876d45bd4e41a7143594a6cb11b6893a0f620
CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; 
TinderBox: Win-x86@39, Branch:master, Time: 2016-02-11_00:07:38
Locale: fi-FI (fi_FI)

LibreOffice 3.5.0rc3 
Build ID: 7e68ba2-a744ebf-1f241b7-c506db1-7d53735
Comment 3 Yousuf Philips (jay) (retired) 2016-03-07 09:41:21 UTC
Its a regression as it was fine in 3.3 and 3.4.

The simple fix to this is to swap steps 3 and 4. Looking at the common behaviour when using to ctrl to multiselect, you always click the first entry and then press ctrl after that, so likely this was an intentional change.

@Eike: any thoughts?
Comment 4 Óvári 2016-04-01 11:13:13 UTC
This seems to relate to patch of bug 93936.

Added Kumar Thangavel(ldcs.co.in) to CC.

@Kumar Thangavel(ldcs.co.in): Could you implement at patch for this to target:5.2.0?

Thank you
Comment 5 Kumar Thangavel 2016-04-01 12:04:57 UTC
(In reply to Óvári from comment #4)
> This seems to relate to patch of bug 93936.
> 
> Added Kumar Thangavel(ldcs.co.in) to CC.
> 
> @Kumar Thangavel(ldcs.co.in): Could you implement at patch for this to
> target:5.2.0?
> 
> Thank you

As per comment3 its looks like intentional change. Do we need to change the current behaviour ?? Please confirm.
Comment 6 Óvári 2016-04-04 10:18:28 UTC
(In reply to Kumar Thangavel(ldcs.co.in) from comment #5)
> As per comment3 its looks like intentional change. Do we need to change the
> current behaviour ?? Please confirm.

It would be appreciated if you would fix as it is a regression. Thank you
Comment 7 Xisco Faulí 2016-09-20 16:10:36 UTC
Adding keyword 'bibisectRequest' to see whether this regression is already present in the oldest build of bibisect-43all repository or not.
In case it's already present, change 'bibisectRequest' to 'preBibisect'.
Otherwise, change 'bibisectRequest' to 'bibisected' and add a comment with the output from 'git bisect log'
Comment 8 Óvári 2016-09-21 11:05:58 UTC
Bug has slightly changed. Following the steps in the Comment 0
5. Click cell G1
   Cell A1 incorrectly shows:      =SUM(,B1:G1
   Cell A1 should show:            =SUM(B1,G1

Linux Mint 18 Cinnamon
Version: 5.1.4.2
Build ID: 1:5.1.4-0ubuntu1
CPU Threads: 2; OS Version: Linux 4.4; UI Render: default
Comment 9 Commit Notification 2017-08-27 09:58:50 UTC
Dennis Francis committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0cf19169b634dcc164e028adf1f51f8849c5f884

tdf#97548: Do not set anchor flag on starting formula mode in a cell

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2017-08-31 16:40:55 UTC
Dennis Francis committed a patch related to this issue.
It has been pushed to "libreoffice-5-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8c8b7e0d7ae16f238089e857f2549d6de058cf2e&h=libreoffice-5-4

tdf#97548: Do not set anchor flag on starting formula mode in a cell

It will be available in 5.4.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Óvári 2017-09-04 10:05:20 UTC
(In reply to Commit Notification from comment #9)
> Dennis Francis committed a patch related to this issue.
> It has been pushed to "master":
> 
> http://cgit.freedesktop.org/libreoffice/core/commit/
> ?id=0cf19169b634dcc164e028adf1f51f8849c5f884
> 
> tdf#97548: Do not set anchor flag on starting formula mode in a cell
> 
> It will be available in 6.0.0.
> 
> Affected users are encouraged to test the fix and report feedback.

Thank you for the fix.

Version: 6.0.0.0.alpha0+
Build ID: 9c165fe3084b7c054f9f04f3b065897abcbe2162
CPU threads: 2; OS: Linux 4.10; UI render: default; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2017-09-02_23:12:31
Locale: hu-HU (hu_HU.UTF-8); Calc: group