tdf#97548: Do not set anchor flag on starting formula mode in a cell

Change-Id: I4d9699fa3106f7a575ad1afa3a36371344719d09
Reviewed-on: https://gerrit.libreoffice.org/41564
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Dennis Francis <dennis.francis@collabora.co.uk>
(cherry picked from commit 0cf19169b634dcc164e028adf1f51f8849c5f884)